# simplerr

./: pyproject.toml
src/simplerr/: __init__.py  config.py  cors.py  ctx.py  dispatcher.py  events.py  globals.py  helpers.py  logging.py  serialise.py  session.py  testing.py  typing.py  version.py  web.py  wrappers.py
src/simplerr/authlib/: __init__.py  apps.py  integration.py
src/simplerr/json/: __init__.py  provider.py
tests/: run.py  test_scripting.py  test_templating.py  test_web.py
tests/authlib/: test_oauth_client.py  util.py
tests/modules/simplerr/: web.py
