[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simplerr"
dynamic = ["version"]
description = "A sample Python webframework"
readme = "README.md"
authors = [
    {name = "Javier Woodhouse", email = "javier@wingaru.com.au"},
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.6",
]
keywords = ["simple", "web", "development", "framework"]
dependencies = [
    "click==7.0",
    "Jinja2>=3.0.0, < 3.1.0",
    "Werkzeug>=0.16.0, < 3.0.0",
    "itsdangerous==2.2.0"
]
requires-python = ">=3.6"

[project.optional-dependencies]
dev = ["check-manifest", "peewee==3.13.3"]
test = ["coverage", "colour_runner", "pytest"]
authlib = ["authlib==1.2.1", "requests==2.22.0"]

[project.urls]
Homepage = "https://github.com/yevrah/simplerr"

[project.scripts]
webserv = "simplerr.__main__:main"

[tool.hatch.version]
path = "src/simplerr/version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests"
]

[tool.hatch.build.targets.wheel]
sources = ["src"]